# superteam-academy

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .prettierignore  .vercelignore  AGENTS.md  ANY_TYPE_AUDIT.md  ARCHITECTURE.md  ARQUITETURA.md  Anchor.toml  BOUNTY_DETAILS.md  CLAUDE.md  CMS_GUIDE.md  CUSTOMIZATION.md  Cargo.toml  DEMO.md  DEMO_SCRIPT.md  DEMO_VIDEO_OUTLINE.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DESIGN.md  DEVNET_DEPLOYMENT.md  Dockerfile.backend  IMPLEMENTATION_STATUS.md  Job description.txt  LEIA-ME.md  LICENSE  LIGHTHOUSE_COMPLETE_SUMMARY.md  LIGHTHOUSE_QUICK_REFERENCE.md  LIGHTHOUSE_STATUS.md  PERSONALIZAÇÃO.md  PR.md  PRD.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  ROADMAP.md  (+43 more)
app/programs/lms-certificates/: Cargo.toml
app/programs/lms-certificates/src/: lib.rs
onchain-academy/: .env  .gitignore  .plan.md  Anchor.toml  Cargo.toml  DEPLOYMENT-LOG.md  README.md  VERIFIABLE_BUILD.md  package-lock.json  package.json  tsconfig.json  xp-mint.txt
onchain-academy/app/: .browserslistrc  .env.example  .gitignore  11.sh  ARCHITECTURE.md  CMS_GUIDE.md  CUSTOMIZATION.md  DEMO_SCRIPT.md  HOW_TO_RUN.md  INTEGRATION_GUIDE.md  LICENSE.txt  README.md  SETUP_GUIDE.md  auth.ts  cleanup.sh  cplan  eslint.config.mjs  fix-tests.js  i18n.ts  lighthouserc.json  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sanity.cli.ts  sanity.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
onchain-academy/app/__tests__/: AuthContext.test.tsx  middleware.test.ts
onchain-academy/app/__tests__/api/: link-wallet.test.ts
onchain-academy/app/__tests__/services/: AuthContext.test.tsx  learning-progress.test.ts  supabase-progress.test.ts  tests-utils.test.ts
onchain-academy/app/app/: app-layout.tsx  app-page.tsx  globals.css  layout.tsx  page.tsx
onchain-academy/app/app/[locale]/: layout.tsx  loading.tsx  page.tsx
onchain-academy/app/app/auth/: page.tsx
onchain-academy/app/app/courses/: page.tsx
onchain-academy/app/app/dashboard/: page.tsx
onchain-academy/app/backup_20260219_223622/: COMPLETE_FIX_GUIDE.md  COMPLETE_WINNER.md  FILE_NAMING_FIX.md  FILE_PLACEMENT_GUIDE.md  FINAL_CHECKLIST.md  MASTER_SUMMARY.md  PROJECT_STRUCTURE.md  ROOT_CONFIG_FILES.txt  SECURITY_AUDIT.md  diagnostic.js  push-updates.sh  rename-files.js  setup.js  split.js  tailwind.config.js  update-repo.sh  verify-setup.js
onchain-academy/app/components/: LessonView.tsx  WalletConnectButton.tsx  code-editor.tsx  enroll-button.tsx  pwa-registration.tsx  theme-toggle.tsx
onchain-academy/app/contexts/: AuthContext.tsx  WalletProvider.tsx
onchain-academy/app/e2e/: admin.spec.ts  community.spec.ts  courses.spec.ts  dashboard.spec.ts  enrollment.spec.ts  i18n.spec.ts  landing.spec.ts  leaderboard.spec.ts  navigation.spec.ts  onboarding.spec.ts  settings.spec.ts  smoke.spec.ts  theme.spec.ts
onchain-academy/app/hooks/: use-wallet.ts
onchain-academy/app/i18n/: config.ts
onchain-academy/app/lib/: actions.ts  admin.ts  analytics.ts  api.ts  auth-service.ts  code-sandbox.ts  learning-progress.ts  react-shim.js  supabase.ts  supabaseClient.ts  utils.ts
onchain-academy/app/locales/: en.json  es.json  pt-BR.json
onchain-academy/app/messages/: en.json  es.json  pt-br.json
onchain-academy/app/public/: manifest.json  sw.js
onchain-academy/app/scripts/: devnet-setup.ts  generate-pwa-icons.sh  postinstall.js  seed-sanity.ts  verify-devnet-state.ts
onchain-academy/app/src/: proxy.ts
onchain-academy/apps/academy/: package-lock.json  package.json  payload-types.ts  payload.config.ts
onchain-academy/apps/lms/: components.json  next.config.ts  package-lock.json  package.json  systemdesign.json
onchain-academy/backend/: README.md  package-lock.json  package.json  test-mint-xp.ts
onchain-academy/backend/scripts/: create-xp-token.ts  seed-admin.ts  seed-completion.ts  xp-token-config.json
onchain-academy/backend/src/: seed.ts  server.ts  swagger.ts
onchain-academy/backend/supabase/: schema.sql
onchain-academy/formal_verification/: academy.qedspec
onchain-academy/idl/: onchain_academy.json  onchain_academy.ts
onchain-academy/migrations/: deploy.ts
onchain-academy/patches/mpl-core/: .cargo_vcs_info.json  Cargo.toml
onchain-academy/programs/onchain-academy/: Cargo.toml
onchain-academy/programs/onchain-academy-pinocchio/: Cargo.toml
onchain-academy/scripts/: build-pinocchio-deploy.sh  check-xp.ts  close-enrollment.ts  complete-lesson.ts  create-achievements-collection.ts  create-all-courses.ts  create-course-anchor-fundamentals.ts  create-courses.ts  create-mock-course.ts  create-mock-track.ts  create-track-collections.ts  cu-compare.mjs  deploy-devnet.ts  devnet-e2e-test.ts  devnet-setup.ts  e2e-flow.ts  enroll.ts  fetch-config.ts  fetch-course.ts  fetch-enrollment.ts  finalize-course.ts  init-xp-metadata.ts  initialize.ts  issue-credential.ts  issue-retroactive-credentials.ts  load-program.ts  register-achievements-api.ts  register-courses.ts  rotate-config-authority.ts  select-program.sh  setup-achievements.ts  setup-backend-signer.ts  setup-devnet.ts  sync-courses-onchain.ts  update-xp-uri.ts
onchain-academy/scripts/lib/: academy.ts
onchain-academy/tests/: CU_BASELINE.md  CU_BASELINE.pinocchio.md  CU_COMPARISON.md  cu-measurement.ts  onchain-academy.ts
onchain-academy/tests/differential/: Cargo.toml
onchain-academy/tests/rust/: Cargo.toml
onchain-academy/trident-tests/: Cargo.toml  Trident.toml
onchain-academy/trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
programs/academy/: Cargo.toml
programs/academy/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/academy/tests/: integration.rs
programs/superteam-academy/: Cargo.toml
programs/superteam-academy/src/: errors.rs  events.rs  lib.rs  utils.rs
superteam-academy/tests/rust/: Cargo.toml
tests/rust/: Cargo.toml
tests/rust/src/: fixtures.rs  integration.rs  lib.rs  unit.rs
(+8408 files in other folders)
