[workspace]
members = [
    "programs/*"
]
resolver = "2"
exclude = ["trident-tests/fuzz"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
blake3 = "=1.5.5"
rmp-serde = "=1.3.0"
rmp = "=0.8.14"

[patch.crates-io]
mpl-core = { path = "patches/mpl-core" }
