[workspace]
members = [
    "programs/*",
]
exclude = [
    # Trident fuzz tests are their own workspace (own [workspace] table +
    # crates.io trident-fuzz pinning a different solana-sdk). Keep them out of
    # the program workspace so `anchor build` / `cargo build` never resolve them.
    "trident-tests",
]
resolver = "2"

[workspace.dependencies]
# indexmap ≥2.12 bumped MSRV to 1.82; Solana's bundled rustc is 1.79.
# Pin to <2.12 so `cargo update` never regresses the CI/verifiable build.
indexmap = "<2.12"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
