[package]
name = "superteam-academy"
version = "0.1.0"
description = "Superteam Academy on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "superteam_academy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5.0"
spl-type-length-value = "0.6.0"
