[workspace]

[package]
name = "onchain-academy-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
onchain-academy = { path = "../../programs/onchain-academy", features = ["no-entrypoint"] }
anchor-lang = "0.31.1"
solana-sdk = "=2.0.25"
solana-program = "=2.0.25"
borsh = "0.10"
# Already in the tree via `onchain-academy`; used here to pack real Token-2022
# account fixtures for the require_xp_mint assertions.
spl-token-2022 = { version = "5", features = ["no-entrypoint"] }

[lib]
name = "onchain_academy_tests"
path = "src/lib.rs"
